--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <p class="hashtag">#DesarrolloWebCompleto</p>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/01.js"></script>
+    <script src="js/02.js"></script>
 
 </body>
 </html>
