--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <p>Introducción a JavaScript</p>
         <p class="hashtag">#DesarrolloWebCompleto</p>
     </div>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script>
     <script src="js/01.js"></script>
-    <script src="js/02.js"></script>
+    <script src="js/02.js"></script> -->
+    <!-- <script src="js/03.js"></script> -->
+    <script src="js/04.js"></script>
 
 </body>
 </html>
