--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
         <p>Introducción a JavaScript</p>
         <p class="hashtag">#DesarrolloWebCompleto</p>
+
+        <button type="button" id="boton">Ver notificacion</button>
     </div>
 
-    <script src="js/30.js"></script>
+    <script src="js/31.js"></script>
 
 </body>
 </html>
