--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Introducción a JavaScript</p>
         <p class="hashtag">#DesarrolloWebCompleto</p>
 
-        <button type="button" id="boton">Ver notificacion</button>
+        <button type="button" id="boton">Ver notificacion aquí</button>
     </div>
 
     <script src="js/31.js"></script>
